[workspace]
members = ["commons"]
resolver = "2"

[workspace.dependencies]
anchor-lang = { git = "https://github.com/solana-foundation/anchor", rev = "2dd5c2473f7964e080f5fa3bc06aa445c07396db", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/solana-foundation/anchor", rev = "2dd5c2473f7964e080f5fa3bc06aa445c07396db" }
anchor-client = { git = "https://github.com/solana-foundation/anchor", rev = "2dd5c2473f7964e080f5fa3bc06aa445c07396db" }

anyhow = "1.0.71"
tokio = { version = "1.43.0", features = ["full", "parking_lot"] }
bincode = "1.3.3"
solana-sdk = "3.0.0"
solana-client = "3.0.0"
solana-program = "3.0.0"
ruint = "1.3.0"
num-traits = "0.2.19"
num-integer = "0.1.46"
bytemuck = "1.16.3"
async-trait = "0.1.86"
spl-transfer-hook-interface = "2.1.0"
spl-associated-token-account = "8.0.0"
spl-memo = "6.0.0"
serde_json = "1.0.138"
serde = "1.0.228"
bs58 = "0.5.0"
commons = { path = "./commons" }
time = "=0.3.40"
time-core = "=0.1.4"
time-macros = "=0.2.21"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
